package survival2d.match.entity.obstacle;

public enum ObstacleType {
  TREE,
  CONTAINER,
  STONE,
  WALL
}
