@startuml

title __OBSTACLE's Class Diagram__\n

  namespace survival2d {
    namespace match.entity.obstacle {
      class survival2d.match.entity.obstacle.Container {
          ~ hp : double
          ~ id : int
          ~ items : List<Item>
          ~ position : Vector2D
          + Container()
          + equals()
          + getHp()
          + getId()
          + getItems()
          + getPosition()
          + getShape()
          + getType()
          + hashCode()
          + isDestroyed()
          + setDestroyed()
          + setHp()
          + setId()
          + setItems()
          + setPosition()
          + setShape()
          + setType()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.obstacle {
      interface survival2d.match.entity.obstacle.Obstacle {
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.obstacle {
      enum ObstacleType {
        CONTAINER
        STONE
        TREE
        WALL
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.obstacle {
      class survival2d.match.entity.obstacle.Stone {
          ~ id : int
          ~ position : Vector2D
          + Stone()
          + equals()
          + getId()
          + getPosition()
          + getShape()
          + getType()
          + hashCode()
          + setId()
          + setPosition()
          + setShape()
          + setType()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.obstacle {
      class survival2d.match.entity.obstacle.Tree {
          ~ hp : double
          ~ id : int
          ~ position : Vector2D
          + Tree()
          + equals()
          + getHp()
          + getId()
          + getPosition()
          + getShape()
          + getType()
          + hashCode()
          + isDestroyed()
          + setDestroyed()
          + setHp()
          + setId()
          + setPosition()
          + setShape()
          + setType()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.obstacle {
      class survival2d.match.entity.obstacle.Wall {
          ~ id : int
          ~ position : Vector2D
          + Wall()
          + equals()
          + getId()
          + getPosition()
          + getShape()
          + getType()
          + hashCode()
          + setId()
          + setPosition()
          + setShape()
          + setType()
          + toString()
          # canEqual()
      }
    }
  }
  

  survival2d.match.entity.obstacle.Container .up.|> survival2d.match.entity.base.Containable
  survival2d.match.entity.obstacle.Container .up.|> survival2d.match.entity.base.Destroyable
  survival2d.match.entity.obstacle.Container .up.|> survival2d.match.entity.base.HasHp
  survival2d.match.entity.obstacle.Container .up.|> survival2d.match.entity.obstacle.Obstacle
  survival2d.match.entity.obstacle.Container o-- survival2d.match.entity.base.Rectangle : shape
  survival2d.match.entity.obstacle.Container o-- survival2d.match.entity.obstacle.ObstacleType : type
  survival2d.match.entity.obstacle.Stone .up.|> survival2d.match.entity.obstacle.Obstacle
  survival2d.match.entity.obstacle.Stone o-- survival2d.match.entity.base.Circle : shape
  survival2d.match.entity.obstacle.Stone o-- survival2d.match.entity.obstacle.ObstacleType : type
  survival2d.match.entity.obstacle.Tree .up.|> survival2d.match.entity.base.Destroyable
  survival2d.match.entity.obstacle.Tree .up.|> survival2d.match.entity.base.HasHp
  survival2d.match.entity.obstacle.Tree .up.|> survival2d.match.entity.obstacle.Obstacle
  survival2d.match.entity.obstacle.Tree o-- survival2d.match.entity.base.Circle : shape
  survival2d.match.entity.obstacle.Tree o-- survival2d.match.entity.obstacle.ObstacleType : type
  survival2d.match.entity.obstacle.Wall .up.|> survival2d.match.entity.obstacle.Obstacle
  survival2d.match.entity.obstacle.Wall o-- survival2d.match.entity.base.Rectangle : shape
  survival2d.match.entity.obstacle.Wall o-- survival2d.match.entity.obstacle.ObstacleType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
